Fix flex overflow hiding content

--- a/Code/css/global.css
+++ b/Code/css/global.css
@@ -482,7 +482,12 @@ body {              /*Has the ID of 'flexBody'*/
   box-sizing: content-box;
 }
 
-body > form {       /*Has the ID of 'content'*/
+body > div {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+body > div > form {       /*Has the ID of 'content'*/
   flex: 0 0 auto;
   align-self: center;
   padding: 25px;
